# Microservice_Monitoring/internal/domain/models/metingen.go
@@ -27,9 +27,9 @@ type Afwijking struct {
 	KunstwerkID         int64     `db:"kunstwerk_id" json:"kunstwerkId"`
 	SensorID            *int64    `db:"sensor_id" json:"sensorId"`
 	Time                time.Time `db:"time" json:"time"`
-	NormMinWaarde       float64   `db:"norm_min_waarde" json:"normMinWaarde"`
-	NormMaxWaarde       float64   `db:"norm_max_waarde" json:"normMaxWaarde"`
-	NormMargePercentage *float64  `db:"norm_marge_percentage" json:"normMargePercentage"`
-	GemetenWaarde       float64   `db:"gemeten_waarde" json:"gemetenWaarde"`
-	IsWarning           bool      `db:"is_warning" json:"isWarning"`
+	NormMinWaarde       float64   `db:"norm_min_waarde" json:"norm_min_waarde"`
+	NormMaxWaarde       float64   `db:"norm_max_waarde" json:"norm_max_waarde"`
+	NormMargePercentage *float64  `db:"norm_marge_percentage" json:"norm_marge_percentage"`
+	GemetenWaarde       float64   `db:"gemeten_waarde" json:"gemeten_waarde"`
+	IsWarning           bool      `db:"is_warning" json:"is_warning"`
 }
